<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Technoblast 2013</string>
    <string name="action_about">About Developer</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="list_array">
        <item>Home</item>
        <item>About Us</item>
        <item>Tracks</item>
        <item>Register</item>
        <item>Sponsors</item>
        <item>Prizes</item>
        <item>Gallery</item>
        <item>Technoblast 2012</item>
        <item>Contact Us</item>
    </string-array>

    <string name="bReg">Register</string>
    <string name="regDetails">Click on the button below to Register</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="previous">&lt;&lt; Previous</string>
    <string name="next">Next &gt;&gt;</string>
    <string name="img_title">Image 01</string>
    <string name="about_developer">ABOUT DEVELOPER</string>
    <string name="about_developer_content">Developed By: PULKIT NARANG\nTEAM HARD TARGETS\nVersion: 1.0.0 11/10/2013</string>
    <string name="dialog_title">Alert</string>
    <string name="dialog_message">\nAre you sure you want to quit the application?\n</string>
    <string name="yes">Quit</string>
    <string name="no">Return</string>
    <string name="title_activity_file_dialog">FileDialog</string>
    
    <string name="coordinator">Coordinators</string>
    <string name="c1">Wg Cdr Prof. TPN Singh</string>
    <string name="cm1">+91\-8826006878</string>
    <string name="c2">Dr. Abhishek Swami</string>
    <string name="cm2">+91\-9899932076</string>
    <string name="c3">Dr. Arindam Ghosh</string>
    <string name="cm3">+91\-9990796375</string>
    <string name="c4">Mrs. Komal Grover</string>
    <string name="cm4">+91\-9717400336</string>
    <string name="c5">Mr. Akhilesh Dwivedi</string>
    <string name="cm5">+91\-9990662248</string>
    
    <string name="scoordinator">Student Coordinators</string>
    <string name="cs1">Akhil Narayanan</string>
    <string name="csm1">+91\-9971283213</string>
    <string name="cs2">Gopal Gupta</string>
    <string name="csm2">+91\-8447946581</string>
    <string name="cs3">Jyoti Raghav</string>
    <string name="csm3">+91\-7838621289</string>
    <string name="cs4">Kshitij Salariya</string>
    <string name="csm4">+91\-8587010085</string>
    <string name="cs5">Pulkit Narang</string>
    <string name="csm5">+91\-8800639904</string>
    
    <string name="prizeH">Technoblast 2013 Prizes</string>

</resources>
